fixed weird spacing on mobile between header and about

--- a/public/css/sections/1-about.css
+++ b/public/css/sections/1-about.css
@@ -12,6 +12,7 @@
 }
 
 .about-text{
+  padding-top: 2em;
   margin: 0 auto;
   text-align: center;
 }
